# aiodogstatsd

./: .coveragerc  .drone.jsonnet  .drone.yml  .editorconfig  .gitignore  .isort.cfg  404.html  CHANGELOG.md  Makefile  README.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  pytest.ini  sitemap.xml  tox.ini
.github/: main.workflow
.github/workflows/: default.yml  release-created.yml  watch-starred.yml
aiodogstatsd/: client.py  compat.py  protocol.py  typedefs.py  types.py
aiodogstatsd/contrib/: aiohttp.py  sanic.py  starlette.py
docs/: index.md  usage.md
docs/frameworks/: aiohttp.md  sanic.md  starlette.md
examples/: app_aiohttp.py  app_sanic.py  app_starlette.py  contextmanager.py  timeit.py  timeit_task.py  timing.py
frameworks/aiohttp/: index.html
frameworks/sanic/: index.html
frameworks/starlette/: index.html
search/: search_index.json
tests/: conftest.py  test_client.py  test_contrib_aiohttp.py  test_contrib_sanic.py  test_contrib_starlette.py  test_ok.py  test_protocol.py
usage/: index.html
