[tool.black]
line-length = 88
target-version = ["py36", "py37", "py38"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.vscode
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
combine_as_imports = true
default_section = "LOCALFOLDER"
force_grid_wrap = false
include_trailing_comma = true
known_first_party = "aiodogstatsd"
known_standard_library = ""
known_third_party = ""
line_length = 88
multi_line_output = 3
not_skip = "__init__.py"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
skip = ".eggs,.venv,venv"

[tool.poetry]
name = "aiodogstatsd"
version = "0.12.0-alpha.0"
description = "An asyncio-based client for sending metrics to StatsD with support of DogStatsD extension"
authors = [
    "Nikita Grishko <gr1n@protonmail.com>"
]
license = "MIT"

readme = "README.md"

homepage = "https://github.com/Gr1N/aiodogstatsd"
repository = "https://github.com/Gr1N/aiodogstatsd"
documentation = "https://gr1n.github.io/aiodogstatsd"

keywords = ["asyncio", "statsd", "statsd-client", "statsd-metrics", "dogstatsd"]

classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.6"

aiohttp = { version = ">=3.0.0", optional = true }
sanic = { version = ">=19.3.0", optional = true }
starlette = { version = ">=0.13.0", optional = true }

[tool.poetry.dev-dependencies]
async-asgi-testclient = ">=1.4"
black = { version = ">=18.9b0", allow-prereleases = true }
flake8 = ">=3.7.6"
flake8-bugbear = ">=18.8.0"
isort = { version = ">=4.3.5", extras = ["pyproject"] }
mkdocs-material = ">=4.6"
mypy = ">=0.670"
pytest = ">=4.3.0"
pytest-asyncio = ">=0.10.0"
pytest-cov = ">=2.6.1"
pytest-mock = ">=1.10.1"
pytest-mockservers = ">=0.4.0"
pytest-timeout = ">=1.3"
uvicorn = ">=0.11.2"
yarl = ">=1.3.0"

[tool.poetry.extras]
aiohttp = ["aiohttp"]
sanic = ["sanic"]
starlette = ["starlette"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
