[tool.black]
line-length = 88
target-version = ["py36", "py37", "py38", "py39"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.vscode
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",
  # Don't complain about missing debug-only code:
  "def __repr__",
  "if self.debug",
  # Don't complain about some magic methods:
  "def __str__",
  # Don't complain if tests don't hit defensive assertion code:
  "raise AssertionError",
  "raise NotImplementedError",
  # Don't complain if non-runnable code isn't run:
  "if 0:",
  "if __name__ == .__main__.:"
]
ignore_errors = true

[tool.isort]
combine_as_imports = true
profile = "black"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
skip = ".eggs,.venv,venv"

[tool.poetry]
name = "aiodogstatsd"
version = "0.16.0-alpha.0"
description = "An asyncio-based client for sending metrics to StatsD with support of DogStatsD extension"
authors = [
    "Nikita Grishko <gr1n@protonmail.com>"
]
license = "MIT"

readme = "README.md"

homepage = "https://github.com/Gr1N/aiodogstatsd"
repository = "https://github.com/Gr1N/aiodogstatsd"
documentation = "https://gr1n.github.io/aiodogstatsd"

keywords = ["asyncio", "statsd", "statsd-client", "statsd-metrics", "dogstatsd"]

classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = ">=3.6.2,<4.0"

aiohttp = { version = ">=3.0", optional = true }
sanic = { version = ">=20.3", optional = true }
starlette = { version = ">=0.13", optional = true }

[tool.poetry.dev-dependencies]
async-asgi-testclient = ">=1.4"
black = { version = ">=21.12b0", allow-prereleases = true }
coverage = { version = ">=6.2", extras = ["toml"] }
flake8 = ">=4.0"
flake8-bugbear = ">=21.11"
isort = ">=5.10"
mkdocs-material = ">=8.1"
mypy = ">=0.910"
pytest = ">=6.2"
pytest-asyncio = ">=0.16"
pytest-cov = ">=3.0"
pytest-mock = ">=3.6"
pytest-mockservers = ">=0.6"
pytest-timeout = ">=2.0"
uvicorn = ">=0.16"
yarl = ">=1.7"

[tool.poetry.extras]
aiohttp = ["aiohttp"]
sanic = ["sanic"]
starlette = ["starlette"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
